spade-tests/src/snapshots/spade_tests__typeinference__register_initial_value_error.snap
---
source: spade-tests/src/typeinference.rs
---
entity t(clk: clock) -> bool {
    reg(clk) x initial(0) = true;
    true
}


error: Register initial value mismatch
  ┌─ testinput:2:24
  │
2 │     reg(clk) x initial(0) = true;
  │                        ^ Found type int<_>
  │
  = Expected: bool
  =      Got: int<_>


